--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "express",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +14,9 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "method-override": "^3.0.0",
-    "mongoose": "^8.5.2",
+    "mongoose": "^8.5.2"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.4"
   }
 }
